Add Maven as build system and update readme